# NativeActivitySample

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NativeMain.cpp  NativeMain.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
